--- a/src/App.css
+++ b/src/App.css
@@ -22,23 +22,58 @@ div::after {
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 }
 div h1 {
-  position: absolute;
+/*  position: absolute;
   top: 50%;
-  left: 50%;
+  left: 50%; */
   z-index: 2;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+/*  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
   color: #fff;
-  font : normal 300 64px/1 'Josefin Sans', sans-serif;
+/*  font : normal 300 64px/1 'Josefin Sans', sans-serif;  */
+/*  font : 300 64px/1;  */  
+  font-size: 3rem;
+  font-weight: 300;
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  white-space: nowrap;
+  margin: 4vh auto;
+}
+div h2 {
+  z-index: 2;
+  color: #fff;
+/*  font-size: 2rem;
+*/  font-weight: 300;
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  white-space: nowrap;
+}
+div h1 {
+/*  position: absolute;
+  top: 50%;
+  left: 50%; */
+  z-index: 2;
+/*  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
+  color: #fff;
+/*  font : normal 300 64px/1 'Josefin Sans', sans-serif;  */
+/*  font : 300 64px/1;  */  
+  font-size: 3rem;
+  font-weight: 300;
+  font-family: 'Josefin Sans', sans-serif;
   text-align: center;
   white-space: nowrap;
 }
 
 
-#section03 { background: url("https://images.unsplash.com/photo-1495975295218-a59edae1540a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1526&q=80") center center / cover no-repeat;}
-#section04 { background: url("https://picsum.photos/1200/800?image=506") center center / cover no-repeat;}
-
-.demo a {
+#section03 { 
+  background: url("https://images.unsplash.com/photo-1495975295218-a59edae1540a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1526&q=80") center center / cover no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+/*#section04 { background: url("https://picsum.photos/1200/800?image=506") center center / cover no-repeat;}
+*/
+.header a {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -52,7 +87,7 @@ div h1 {
   text-decoration: none;
   transition: opacity .3s;
 }
-.demo a:hover {
+.header a:hover {
   opacity: .5;
 }
 
