--- a/src/App.css
+++ b/src/App.css
@@ -19,28 +19,7 @@ div::after {
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 }
 
-.section {
-  color: #fff;
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  height: 100vh;
-  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
-  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
-}
-
-header {
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-/*  background: url("https://images.unsplash.com/photo-1495975295218-a59edae1540a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1526&q=80") center center / cover no-repeat;
-*/}
-
-{/* TODO: find out how to get this background image into the header without adding an id? notice that the gradient from the .section rule currently usurps it if this line is in the header rule */}
-#section03 { 
-  background: url("https://images.unsplash.com/photo-1495975295218-a59edae1540a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1526&q=80") center center / cover no-repeat;
-}
-
-h1,h2 {
+h1,h2, h3 {
   z-index: 2;
   margin: 2vh;
   text-align: center;
@@ -55,51 +34,54 @@ h2 {
   font-weight: 300;
 }
 
-main {
-
+h3 {
+  font-weight: 400;
+  border: #fff solid 2px;
+  padding: 1vh;
 }
 
-/*div {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}*/
-
-
-/*div h2 {
-  z-index: 2;
+.section {
   color: #fff;
-  font-size: 2rem;
-  font-weight: 300;
-  text-align: center;
-}*/
-div h3 {
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  height: 100vh;
+  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
+  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
+}
+
+header {
   z-index: 2;
-/*  display: inline-block; */
-  /*transform: translate(0, -50%);*/
-  color: #fff;
-  font: normal 400 20px/1 'Josefin Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+{/* TODO: find out how to get this background image into the header without adding an id? notice that the gradient from the .section rule currently usurps it if this line is in the header rule */}
+#section03 { 
+  background: url("https://images.unsplash.com/photo-1495975295218-a59edae1540a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1526&q=80") center center / cover no-repeat;
+}
+
+header a {
   letter-spacing: .1em;
   text-decoration: none;
   transition: opacity .3s;
+  z-index: 2;
+  color: #fff;
 }
 
-.demo a {
+header a:hover {
+  opacity: .5;
+}
+
+#scroll {
   position: absolute;
   bottom: 20px;
   left: 50%;
-  z-index: 2;
-  display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
-  color: #fff;
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
 }
-.demo a:hover {
-  opacity: .5;
+
+main {
+
 }
 
 #section03 a {
