--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,14 @@ h2 {
 }
 
 .section {
-  color: #fff;
+  /*color: #fff;*/
   font : normal 400 20px/1 'Josefin Sans',
   sans-serif;
   height: 100vh;
 }
 
 header {
+  color: #fff;
   z-index: 2;
   display: flex;
   flex-direction: column;
@@ -60,11 +61,8 @@ header::after {
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 }
 
-a {
-  color: #fff;
-}
-
 header a {
+  color: #fff;
   letter-spacing: .1em;
   text-decoration: none;
   transition: opacity .3s;
@@ -85,8 +83,14 @@ header a {
 }
 
 main {
-
+  color: #000;
 }
+
+nav {
+  padding: 3vh;
+  font-size: 1.5rem;
+}
+
 
 #scroll span {
   position: absolute;
