--- a/src/App.css
+++ b/src/App.css
@@ -87,10 +87,20 @@ main {
 }
 
 nav {
-  padding: 3vh;
+  padding: 0 3vh;
   font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around;
 }
 
+nav a {
+  color: #000;
+  display: inline-block;
+  padding: 2.5vh 4vh;
+  margin-top: 1vh;
+  text-decoration: none;
+  border-bottom: black solid 3px;
+}
 
 #scroll span {
   position: absolute;
